--- a/Assignment_1/src/Window/ViewJPanel.form
+++ b/Assignment_1/src/Window/ViewJPanel.form
@@ -241,6 +241,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Delete"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnDeleteActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="LabelEmailID">
       <Properties>
