--- a/Assignment_1/src/Window/CreateJPanel.form
+++ b/Assignment_1/src/Window/CreateJPanel.form
@@ -62,7 +62,11 @@
                                   <Component id="TxtEmailID" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Component id="BtnAdd" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="BtnAdd" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="TxtPhoto" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="121" max="32767" attributes="0"/>
                   </Group>
@@ -135,6 +139,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="LabelPhoto" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="BtnAdd" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="TxtPhoto" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="BtnSave" min="-2" max="-2" attributes="0"/>
@@ -240,6 +245,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Add"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnAddActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="BtnSave">
       <Properties>
@@ -247,6 +255,11 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnSaveActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JTextField" name="TxtPhoto">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TxtPhotoActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
