--- a/Assignment_1/src/Window/ViewJPanel.form
+++ b/Assignment_1/src/Window/ViewJPanel.form
@@ -18,53 +18,79 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Component id="LabelTitle" alignment="1" max="32767" attributes="0"/>
           <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="BtnView" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="BtnDelete" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-          </Group>
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="249" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="LabelContactinfo" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelEmpID" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelName" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelAge" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelGender" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelStrdate" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelLvl" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelTeaminfo" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelPostitle" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+              <Component id="LabelPhoto" min="-2" pref="117" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="LabelName" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelEmpID" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelAge" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelGender" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
                       <EmptySpace pref="112" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="TxtEmpID" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                           <Component id="TxtName" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                           <Component id="TxtAge" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                           <Component id="TxtGender" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
-                          <Component id="TxtStrdate" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
-                          <Component id="TxtLvl" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
-                          <Component id="TxtTeaminfo" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
-                          <Component id="TxtPostitle" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="211" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="LabelCellno" min="-2" max="-2" attributes="0"/>
-                          <Component id="LabelEmailID" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="TxtCellno" alignment="0" max="32767" attributes="0"/>
-                          <Component id="TxtEmailID" alignment="0" min="-2" pref="105" max="-2" attributes="0"/>
+                          <Component id="LabelPostitle" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="LabelContactinfo" min="-2" max="-2" attributes="0"/>
+                                  <Component id="LabelStrdate" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="LabelLvl" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="LabelTeaminfo" alignment="1" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" attributes="0">
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="LabelCellno" min="-2" max="-2" attributes="0"/>
+                                          <Component id="LabelEmailID" min="-2" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="TxtCellno" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="TxtEmailID" alignment="0" min="-2" pref="105" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                  <Group type="102" alignment="0" attributes="0">
+                                      <EmptySpace min="-2" pref="112" max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Component id="TxtStrdate" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                          <Component id="TxtLvl" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                          <Component id="TxtTeaminfo" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                          <Component id="TxtPostitle" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                          </Group>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
+                  </Group>
+              </Group>
+          </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="BtnView" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="BtnDelete" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <Component id="BtnUpdate" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="326" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -82,58 +108,69 @@
                   <Component id="BtnView" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="BtnDelete" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="LabelName" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="TxtName" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="LabelName" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TxtName" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="LabelEmpID" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TxtEmpID" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="TxtAge" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelAge" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="TxtGender" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelGender" alignment="3" min="-2" pref="17" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="TxtStrdate" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelStrdate" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="TxtLvl" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelLvl" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="TxtTeaminfo" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelTeaminfo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="TxtPostitle" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelPostitle" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="LabelContactinfo" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="LabelCellno" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TxtEmailID" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="LabelEmailID" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TxtCellno" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="BtnUpdate" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="23" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                      <Component id="LabelPhoto" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="198" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="LabelEmpID" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="TxtEmpID" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="TxtAge" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelAge" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="TxtGender" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelGender" alignment="3" min="-2" pref="17" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="TxtStrdate" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelStrdate" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="TxtLvl" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelLvl" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="TxtTeaminfo" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelTeaminfo" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="TxtPostitle" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelPostitle" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="LabelContactinfo" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="LabelCellno" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="TxtEmailID" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="LabelEmailID" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="TxtCellno" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="58" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -158,7 +195,7 @@
         <Component class="javax.swing.JTable" name="TableRecords">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="10" rowCount="4">
+              <Table columnCount="11" rowCount="4">
                 <Column editable="true" title="Name" type="java.lang.Object"/>
                 <Column editable="true" title="Employee ID" type="java.lang.Object"/>
                 <Column editable="true" title="Age" type="java.lang.Object"/>
@@ -169,10 +206,16 @@
                 <Column editable="true" title="Position Title" type="java.lang.Object"/>
                 <Column editable="true" title="Cell No" type="java.lang.Object"/>
                 <Column editable="true" title="Email ID" type="java.lang.Object"/>
+                <Column editable="true" title="Photo" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
@@ -325,6 +368,16 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cell Phone number:"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="LabelPhoto">
+    </Component>
+    <Component class="javax.swing.JButton" name="BtnUpdate">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Update"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnUpdateActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
